# whisper

./: DEVICE_FIX.md  GUI_GUIDE.md  PERFORMANCE_GUIDE.md  QUICK_START.md  README.md  WhisperTranscriber.spec  audio_recorder.py  debug_audio.py  demo.py  gui_debug.py  launch_gui.py  pyproject.toml  requirements.txt  setup.py  setup_app.py  test_all_models.py  test_app.py  test_device_fix.py  test_performance.py  test_progress.py  test_system_info.py  test_whisper_simple.py  whisper_fast.py  whisper_gui.py  whisper_mini.py  whisper_transcriber.py
.github/workflows/: build-whisper-mini.yml  build.yml  build_transcriber..yml
